--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-next.4",
+    "@angular/cdk": "^8.2.0",
     "@angular/common": "~9.0.0-next.4",
     "@angular/compiler": "~9.0.0-next.4",
     "@angular/core": "~9.0.0-next.4",
     "@angular/forms": "~9.0.0-next.4",
+    "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~9.0.0-next.4",
     "@angular/platform-browser-dynamic": "~9.0.0-next.4",
     "@angular/router": "~9.0.0-next.4",
     "angular-cli-ghpages": "^0.6.0",
+    "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "rxjs": "~6.5.3",
+    "firebase": "^6.6.1",
+    "ngx-bootstrap": "^5.1.2",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
