--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/theme.scss"
+              "src/theme.scss",
+              "src/styles.scss"
             ],
             "scripts": [
             ]
