--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "@angular/platform-browser": "~9.0.0-next.4",
     "@angular/platform-browser-dynamic": "~9.0.0-next.4",
     "@angular/router": "~9.0.0-next.4",
+    "@fortawesome/fontawesome-free": "^5.11.1",
+    "@types/chart.js": "^2.8.5",
+    "angular-bootstrap-md": "^8.3.0",
     "angular-cli-ghpages": "^0.6.0",
     "angularfire2": "^5.2.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "firebase": "^6.6.1",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
